--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /keyrings/live/secring.gpg
 /k8s/secret.yaml
 /k8s/secret.prod.yaml
+/k8s/media-sync.prod.yaml
+/ssh/media-sync
+/ssh/media-sync.pub
