Separate mediawiki and blackbox config

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /keyrings/live/pubring.gpg~
 /keyrings/live/pubring.kbx~
 /keyrings/live/secring.gpg
-/k8s/secret.yaml
-/k8s/secret.prod.yaml
 /k8s/media-sync.prod.yaml
 /ssh/media-sync
 /ssh/media-sync.pub/k8s/datadog.prod.yaml
+/k8s/blackbox.prod.yaml
+/k8s/mediawiki.prod.yaml
